# rustCrypto

./: Cargo.toml  Cargo.toml.bak  README.md  build.rs
bindings/: README.md  build-all.ps1  build-all.sh
bindings/android/: CryptoLib.kt  README.md  build.gradle
bindings/android/example/: MainActivity.kt
bindings/android/jni/: crypto_jni.cpp
bindings/android/src/main/cpp/: CMakeLists.txt
bindings/android/src/main/cpp/include/: crypto.h
bindings/android/src/main/cpp/jni/: crypto_jni.cpp
bindings/cpp/: CryptoLib.cpp  CryptoLib.hpp  example.cpp
bindings/electron/: .npmignore  Cargo.toml  README.md  index.d.ts  index.js  package.json
bindings/electron/src/: lib.rs
bindings/go-example/: README.md  crypto.h  ecc_verify.go  example.go  go.mod  go.sum
bindings/go-example/.claude/: settings.local.json
bindings/go-example/crypto/: crypto.go
bindings/go-example/ecc/: ecc.go  go.mod
bindings/go-example/ecc/utils/: base58.go  convert.go
bindings/ios/: CryptoLib.swift  README.md  crypto_lib.podspec
bindings/ios/example/: ViewController.swift
include/: crypto.h
src/: crypto.rs  ecc.rs  ffi.rs  lib.rs
