[package]
name = "rustCrypto"
version = "0.1.0"
edition = "2021"

[lib]
name = "crypto_lib"
crate-type = ["cdylib", "staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
rand = "0.8"
hex = "0.4"
libc = "0.2"
rsa = "0.9"
aes-gcm = "0.10"
pkcs8 = "0.10"
spki = "0.7"
bitcoin = { version = "0.32", features = ["secp-recovery", "rand-std"] }
base58 = "0.2"
sha3 = "0.10"

[build-dependencies]
cbindgen = "0.26"
