[package]
name = "rust-crypto-electron"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12", features = ["serde-json"] }
napi-derive = "2.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
rand = "0.8"
crypto_lib = { path = "../.." }

[dependencies.openssl]
version = "0.10"
features = ["vendored"]

[build-dependencies]
napi-build = "2.0"

[profile.release]
lto = true